...
                        android:text="Nonce:"
                        android:textSize="18dp"
                        app:fontFamily="sans-serif" />


                <TextView
                        android:id="@+id/nonce"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp" />


                <TextView
...

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/ic_lock_outline_black_24dp" />

...
