...
    <string name="clipboard_copy_name">Ethereum Address</string>
    <string name="undo">UNDO</string>
    <string name="undelete_all">Undelete all</string>
    <string name="search">Search</string>
    <string name="decimals_in_list">Decimals: %s</string>
    <string name="relay_transaction">Relay transaction</string>
    <string name="input_not_valid_title">Problem with input</string>
    <string name="input_not_valid_message">Input not valid. Reason: %s</string>
    <string name="no_address_selected">no address selected</string>
    <string name="create_transaction_on_chain_subtitle">Transfer on %s</string>
    <string name="create_tx_error_address_must_be_specified">address must be specified</string>
    <string name="create_tx_error_amount_must_be_specified">amount must be specified</string>
    <string name="create_tx_error_not_enough_funds">Not enough funds for this transaction with the given amount plus fee</string>
...
